Fix checkbox hack checked radio styling.
Also, recompile styleguide and add a line about the checkall dependency to the styleguide.

--- a/applications/dashboard/styleguide/index.html
+++ b/applications/dashboard/styleguide/index.html
@@ -166,7 +166,6 @@ future.</p>
 <li>reboot.scss</li>
 <li>utilities.scss</li>
 <li>nav.scss</li>
-<li>alert.scss</li>
 <li>tooltip.scss</li>
 <li>dropdown.scss</li>
 <li>list-group.scss</li>
@@ -190,6 +189,7 @@ future.</p>
 <li>iCheck - For our radio and checkbox styling.</li>
 <li>Drop - For our user card dropdown.</li>
 <li>Clipboard - For copying text. (Used in the embed section.)</li>
+<li>CheckAll - For checking/unchecking a set of checkboxes at the same time. </li>
 </ul>
 <hr>
 <h2 id="other-dependencies">Other Dependencies</h2>
