--- a/applications/dashboard/styleguide/section-1.html
+++ b/applications/dashboard/styleguide/section-1.html
@@ -306,10 +306,10 @@ javascript file.</p>
 wrapped in an <code>&lt;section&gt;</code> tag.</p>
 <p>PHP rendering: <code>subheading(title [description])</code></p>
 </div>
-                                                <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;h2 class=&quot;subheading-border&quot;&gt;This is a Subheading&lt;/h2&gt;</pre>
+                                                <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;h2 class=&quot;subheading&quot;&gt;This is a Subheading&lt;/h2&gt;</pre>
                                                 </div> <!-- end kss-component-description -->
                                                 <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Default styling</span></div>
-                                                <div class="kss-example padded-bottom"><h2 class="subheading-border">This is a Subheading</h2></div>
+                                                <div class="kss-example padded-bottom"><h2 class="subheading">This is a Subheading</h2></div>
                                     </div>
                                 </section>
                                 <section class="kss-depth-2">
