--- a/applications/dashboard/styleguide/section-6.html
+++ b/applications/dashboard/styleguide/section-6.html
@@ -104,6 +104,7 @@ base <code>.media</code> class is extensible and shouldn&#39;t be used alone.</p
                                             <span class="kss-ref badge pull-right">6-1</span> Media Item
                                             </h2>
                                                 <div class="kss-box padded"><p>The media item.</p>
+<p>PHP rendering helper: The MediaItemModule</p>
 </div>
                                                 <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;div class=&quot;media [modifier class]&quot;&gt;
   &lt;div class=&quot;media-left&quot;&gt;
@@ -113,7 +114,7 @@ base <code>.media</code> class is extensible and shouldn&#39;t be used alone.</p
   &lt;/div&gt;
   &lt;div class=&quot;media-body&quot;&gt;
     &lt;div class=&quot;media-heading&quot;&gt;
-      &lt;div class=&quot;media-title&quot;&gt;Media Title&lt;/div&gt;
+      &lt;h3 class=&quot;media-title&quot;&gt;Media Title&lt;/h3&gt;
       &lt;div class=&quot;info&quot;&gt;
         Created by Becky Van Bussel&lt;span class=&quot;spacer&quot;&gt;•&lt;/span&gt;Version 1.0.0
       &lt;/div&gt;
@@ -148,7 +149,7 @@ base <code>.media</code> class is extensible and shouldn&#39;t be used alone.</p
   </div>
   <div class="media-body">
     <div class="media-heading">
-      <div class="media-title">Media Title</div>
+      <h3 class="media-title">Media Title</h3>
       <div class="info">
         Created by Becky Van Bussel<span class="spacer">•</span>Version 1.0.0
       </div>
@@ -182,7 +183,7 @@ base <code>.media</code> class is extensible and shouldn&#39;t be used alone.</p
   </div>
   <div class="media-body">
     <div class="media-heading">
-      <div class="media-title">Media Title</div>
+      <h3 class="media-title">Media Title</h3>
       <div class="info">
         Created by Becky Van Bussel<span class="spacer">•</span>Version 1.0.0
       </div>
@@ -216,7 +217,7 @@ base <code>.media</code> class is extensible and shouldn&#39;t be used alone.</p
   </div>
   <div class="media-body">
     <div class="media-heading">
-      <div class="media-title">Media Title</div>
+      <h3 class="media-title">Media Title</h3>
       <div class="info">
         Created by Becky Van Bussel<span class="spacer">•</span>Version 1.0.0
       </div>
@@ -250,7 +251,7 @@ base <code>.media</code> class is extensible and shouldn&#39;t be used alone.</p
   </div>
   <div class="media-body">
     <div class="media-heading">
-      <div class="media-title">Media Title</div>
+      <h3 class="media-title">Media Title</h3>
       <div class="info">
         Created by Becky Van Bussel<span class="spacer">•</span>Version 1.0.0
       </div>
@@ -285,7 +286,7 @@ base <code>.media</code> class is extensible and shouldn&#39;t be used alone.</p
                                             </h2>
                                                 <div class="kss-box padded"><p>A media callout is a media item of certain prominence. Usually appears at the top of the page as a kind of
 &quot;current selection&quot; marker. See the theme settings pages for this.</p>
-<p>PHP rendering helper: ThemeInfoModule</p>
+<p>PHP rendering helper: MediaItemModule</p>
 </div>
                                                 <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;div class=&quot;media media-callout [modifier class]&quot;&gt;
   &lt;div class=&quot;media-left&quot;&gt;
@@ -295,8 +296,8 @@ base <code>.media</code> class is extensible and shouldn&#39;t be used alone.</p
   &lt;/div&gt;
   &lt;div class=&quot;media-body&quot;&gt;
     &lt;div class=&quot;flag&quot;&gt;Current Theme&lt;/div&gt;
-    &lt;div class=&quot;media-title&quot;&gt;
-      &lt;h3 class=&quot;media-heading theme-name&quot;&gt;+Baseline&lt;/h3&gt;
+    &lt;div class=&quot;media-heading&quot;&gt;
+      &lt;h3 class=&quot;media-title theme-name&quot;&gt;+Baseline&lt;/h3&gt;
       &lt;div class=&quot;info&quot;&gt;
         &lt;span class=&quot;media-meta author&quot;&gt;Created by &lt;a href=&quot;#&quot;&gt;Mark O&#x27;Sullivan&lt;/a&gt;&lt;/span&gt;
         &lt;span class=&quot;spacer&quot;&gt;|&lt;/span&gt;&lt;span class=&quot;media-meta version&quot;&gt;Version 2.2.112.3&lt;/span&gt;
@@ -317,8 +318,8 @@ base <code>.media</code> class is extensible and shouldn&#39;t be used alone.</p
   </div>
   <div class="media-body">
     <div class="flag">Current Theme</div>
-    <div class="media-title">
-      <h3 class="media-heading theme-name">+Baseline</h3>
+    <div class="media-heading">
+      <h3 class="media-title theme-name">+Baseline</h3>
       <div class="info">
         <span class="media-meta author">Created by <a href="#">Mark O'Sullivan</a></span>
         <span class="spacer">|</span><span class="media-meta version">Version 2.2.112.3</span>
@@ -338,8 +339,8 @@ base <code>.media</code> class is extensible and shouldn&#39;t be used alone.</p
   </div>
   <div class="media-body">
     <div class="flag">Current Theme</div>
-    <div class="media-title">
-      <h3 class="media-heading theme-name">+Baseline</h3>
+    <div class="media-heading">
+      <h3 class="media-title theme-name">+Baseline</h3>
       <div class="info">
         <span class="media-meta author">Created by <a href="#">Mark O'Sullivan</a></span>
         <span class="spacer">|</span><span class="media-meta version">Version 2.2.112.3</span>
