--- a/applications/dashboard/styleguide/section-8.html
+++ b/applications/dashboard/styleguide/section-8.html
@@ -181,7 +181,7 @@ the page data.</p>
     </div>
   </div>
 </div></div>
-                                                    <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Element with <code>toolbar-main</code> class fills up available space.</span> <span class="pull-right"><code>.toolbar-main</code></span></div>
+                                                    <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Element with <code>toolbar-main</code> class has a basis of half the size of the toolbar at full-page width and shrinks slower than its siblings.</span> <span class="pull-right"><code>.toolbar-main</code></span></div>
                                                     <div class="kss-example padded-bottom"><div class="toolbar">
   <form class=toolbar-main>
     <div class="search-wrap">
