--- a/applications/dashboard/styleguide/section-11.html
+++ b/applications/dashboard/styleguide/section-11.html
@@ -90,7 +90,7 @@
                 <div class="content">
                                 <h1 class="kss-title" id="11">Alerts</h1>
                                     <div class="kss-box">
-                                        <div class="padded"><p>Alerts are warning/info/danger/success messages that generally appear at the top of a page. Alerts use twbs&#39;s scss.</p>
+                                        <div class="padded"><p>Alerts are warning/info/danger/success messages that generally appear at the top of a page.</p>
 </div>
                                     </div>
                                 <section class="kss-depth-2">
