Let dropdown cards be configurable
Makes the drop content configurable by allowing the specification of the content selector. Applies this to the user dropdown in the dashboard and adds documentation to the styleguide.

--- a/applications/dashboard/styleguide/section-12.html
+++ b/applications/dashboard/styleguide/section-12.html
@@ -81,7 +81,6 @@
                 <div class="panel-content-wrapper">
                     <div id="fixed-help" class="js-fluid-fixed panel-content">
                         <ul class="nav nav-pills" data-spy="affix">
-                                <li><a href="#12-1" class="nav-link">Card</a></li>
                         </ul>
                     </div>
                 </div>
@@ -89,14 +88,105 @@
             <div class="main">
                 <div class="content">
                                 <h1 class="kss-title" id="12">Cards</h1>
-                                <section class="kss-depth-2">
+                                <section class="kss-depth-3">
                                     <div class="kss-component">
                                         <div class="kss-component-description row full-border">
-                                            <h2 class="kss-title" id="12-1">
-                                            <span class="kss-ref badge pull-right">12-1</span> Card
-                                            </h2>
-                                                <div class="kss-box padded"><p>A card is a collection of info that appears in a vertical card-looking container. We currently use a card for the
-user dropdown in the navbar. A card&#39;s width will expand or contract based on the size of the container it&#39;s in.</p>
+                                            <h3 class="kss-title" id="12-1-1">
+                                            <span class="kss-ref badge pull-right">12-1-1</span> Configuring drop.js
+                                            </h3>
+                                                <div class="kss-box padded"><p>For any element with the <code>.js-card</code> class applied, dashboard.js initializes this html to be content of the block
+with an id that matches the <code>data-content-id</code> attribute. Note that the trigger needs to have an id set in order for
+this functionality to work, as drop expects a unique query selector.</p>
+</div>
+                                                <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;div id=&quot;trigger&quot; class=&quot;js-card btn btn-secondary&quot; data-content-id=&quot;content&quot;&gt;
+  Click Me
+&lt;/div&gt;
+&lt;aside id=&quot;content&quot; class=&quot;js-card-content hidden&quot; aria-hidden=&quot;true&quot;&gt;
+  &lt;div class=&quot;card card-user&quot;&gt;
+    &lt;div class=&quot;card-block media media-sm&quot;&gt;
+      &lt;div class=&quot;media-left&quot;&gt;
+        &lt;div class=&quot;media-image-wrap&quot;&gt;
+          &lt;a title=&quot;LittleChick&quot; href=&quot;#&quot;&gt;
+            &lt;img src=&quot;./public/resources/images/little-chick.jpg&quot;&gt;
+          &lt;/a&gt;
+        &lt;/div&gt;
+      &lt;/div&gt;
+      &lt;div class=&quot;media-content&quot;&gt;
+        &lt;div class=&quot;media-title&quot;&gt;
+          &lt;a href=&quot;#&quot;&gt;LittleChick&lt;/a&gt;
+        &lt;/div&gt;
+        &lt;div class=&quot;info&quot;&gt;Administrator&lt;/div&gt;
+        &lt;a class=&quot;btn btn-sm-rounded btn-secondary padded-top&quot; href=&quot;#&quot;&gt;
+          My Profile
+          &lt;svg class=&quot;icon icon-11 icon-text icon-svg-external-link&quot; viewBox=&quot;0 0 17 17&quot;&gt;
+            &lt;use xlink:href=&quot;#external-link&quot;&gt;&lt;/use&gt;
+          &lt;/svg&gt;
+        &lt;/a&gt;
+      &lt;/div&gt;
+    &lt;/div&gt;
+    &lt;div class=&quot;list-group list-group-flush&quot;&gt; &lt;!-- Uses twbs css --&gt;
+      &lt;a href=&quot;#&quot; class=&quot;list-group-item&quot; target=&quot;_blank&quot;&gt;
+        Customer Support
+        &lt;svg class=&quot;icon icon-svg-external-link&quot; viewBox=&quot;0 0 17 17&quot;&gt;
+          &lt;use xlink:href=&quot;#external-link&quot;&gt;&lt;/use&gt;
+        &lt;/svg&gt;
+      &lt;/a&gt;
+    &lt;/div&gt;
+    &lt;div class=&quot;card-footer&quot;&gt;
+      &lt;a href=&quot;#&quot; class=&quot;btn btn-secondary&quot;&gt;Sign Out&lt;/a&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/aside&gt;</pre>
+                                                </div> <!-- end kss-component-description -->
+                                                <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Default styling</span></div>
+                                                <div class="kss-example padded-bottom"><div id="trigger" class="js-card btn btn-secondary" data-content-id="content">
+  Click Me
+</div>
+<aside id="content" class="js-card-content hidden" aria-hidden="true">
+  <div class="card card-user">
+    <div class="card-block media media-sm">
+      <div class="media-left">
+        <div class="media-image-wrap">
+          <a title="LittleChick" href="#">
+            <img src="./public/resources/images/little-chick.jpg">
+          </a>
+        </div>
+      </div>
+      <div class="media-content">
+        <div class="media-title">
+          <a href="#">LittleChick</a>
+        </div>
+        <div class="info">Administrator</div>
+        <a class="btn btn-sm-rounded btn-secondary padded-top" href="#">
+          My Profile
+          <svg class="icon icon-11 icon-text icon-svg-external-link" viewBox="0 0 17 17">
+            <use xlink:href="#external-link"></use>
+          </svg>
+        </a>
+      </div>
+    </div>
+    <div class="list-group list-group-flush"> <!-- Uses twbs css -->
+      <a href="#" class="list-group-item" target="_blank">
+        Customer Support
+        <svg class="icon icon-svg-external-link" viewBox="0 0 17 17">
+          <use xlink:href="#external-link"></use>
+        </svg>
+      </a>
+    </div>
+    <div class="card-footer">
+      <a href="#" class="btn btn-secondary">Sign Out</a>
+    </div>
+  </div>
+</aside></div>
+                                    </div>
+                                </section>
+                                <section class="kss-depth-3">
+                                    <div class="kss-component">
+                                        <div class="kss-component-description row full-border">
+                                            <h3 class="kss-title" id="12-1-2">
+                                            <span class="kss-ref badge pull-right">12-1-2</span> Card
+                                            </h3>
+                                                <div class="kss-box padded"><p>Here&#39;s the markup for a card.</p>
 </div>
                                                 <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;div class=&quot;card card-user&quot;&gt;
   &lt;div class=&quot;card-block media media-sm&quot;&gt;
