Add Configured messages to addons media view
If an isConfigured method exists in an addon, adds a 'Configured' message to the addons media item view.

Also adds new semantic badges to admin.css and recompiles and updates the styleguide.

Closes https://github.com/vanilla/vanilla/issues/4862

--- a/applications/dashboard/styleguide/section-1.html
+++ b/applications/dashboard/styleguide/section-1.html
@@ -362,13 +362,33 @@ heading should be wrapped in an <code>&lt;section&gt;</code> tag.</p>
 </div>
                                                 <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;button class=&quot;btn btn-primary&quot;&gt;
   Tags
-  &lt;span class=&quot;badge&quot;&gt;42&lt;/span&gt;
+  &lt;span class=&quot;badge [modifier class]&quot;&gt;42&lt;/span&gt;
 &lt;/button&gt;</pre>
                                                 </div> <!-- end kss-component-description -->
                                                 <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Default styling</span></div>
                                                 <div class="kss-example padded-bottom"><button class="btn btn-primary">
   Tags
-  <span class="badge">42</span>
+  <span class="badge [modifier class]">42</span>
+</button></div>
+                                                    <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Danger color.</span> <span class="pull-right"><code>.badge-danger</code></span></div>
+                                                    <div class="kss-example padded-bottom"><button class="btn btn-primary">
+  Tags
+  <span class="badge badge-danger">42</span>
+</button></div>
+                                                    <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Warning color.</span> <span class="pull-right"><code>.badge-warning</code></span></div>
+                                                    <div class="kss-example padded-bottom"><button class="btn btn-primary">
+  Tags
+  <span class="badge badge-warning">42</span>
+</button></div>
+                                                    <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Info color.</span> <span class="pull-right"><code>.badge-info</code></span></div>
+                                                    <div class="kss-example padded-bottom"><button class="btn btn-primary">
+  Tags
+  <span class="badge badge-info">42</span>
+</button></div>
+                                                    <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Success color.</span> <span class="pull-right"><code>.badge-success</code></span></div>
+                                                    <div class="kss-example padded-bottom"><button class="btn btn-primary">
+  Tags
+  <span class="badge badge-success">42</span>
 </button></div>
                                     </div>
                                 </section>
