--- a/applications/dashboard/styleguide/section-2.html
+++ b/applications/dashboard/styleguide/section-2.html
@@ -99,7 +99,7 @@
 <p>These css classes are designed to help a developer add tweaks to a settings page without resorting to inline styles
 or adding css to the page. Of particular interest are the <code>padded*</code> classes. The dashboard design has many elements
 flush to one another, so margins are never assumed. The <code>padded*</code> classes add margins to elements if they need one.</p>
-<p>Please note that in the following examples, any css class prefixed with <code>ex-</code> is not is the admin.css. They are
+<p>Please note that in the following examples, any css class prefixed with <code>ex-</code> is not in the admin.css. They are
 for illustrative purposes only.</p>
 </div>
                                     </div>
@@ -147,7 +147,7 @@ for illustrative purposes only.</p>
                                     <div class="kss-component">
                                         <div class="kss-component-description row full-border">
                                             <h3 class="kss-title" id="2-1-2">
-                                            <span class="kss-ref badge pull-right">2-1-2</span> Horizontal Paddong Helpers
+                                            <span class="kss-ref badge pull-right">2-1-2</span> Horizontal Padding Helpers
                                             </h3>
                                                 <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;div class=&quot;ex-inline&quot;&gt;
   &lt;div class=&quot;ex-block ex-red&quot;&gt;Control Block One&lt;/div&gt;
@@ -333,7 +333,7 @@ It also add a small margin to its items. Most of the flex elements in the dashbo
                                             <h2 class="kss-title" id="2-6">
                                             <span class="kss-ref badge pull-right">2-6</span> Progress Spinner
                                             </h2>
-                                                <div class="kss-box padded"><p>Indicates some kind of progess is occuring.</p>
+                                                <div class="kss-box padded"><p>Indicates some kind of progress is occuring.</p>
 </div>
                                                 <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;div class=&quot;progress&quot;&gt;&lt;/div&gt;</pre>
                                                 </div> <!-- end kss-component-description -->
